--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"gregwar/captcha": "1.0.*",
 		"leafo/lessphp": "0.5",
 		"illuminate/html": "5.0.*",
-		"jdorn/sql-formatter": "1.2.*"
+		"jdorn/sql-formatter": "1.2.*",
+		"rhumsaa/uuid": "2.8.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
