--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "curl/curl": "^1.2",
+        "laravelcollective/html": "^5.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
