--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "curl/curl": "^1.2",
-        "laravelcollective/html": "^5.1"
+        "laravelcollective/html": "^5.1",
+        "ramsey/uuid": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
