--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/framework": "5.1.*",
         "curl/curl": "^1.2",
         "laravelcollective/html": "^5.1",
-        "ramsey/uuid": "^3.0"
+        "ramsey/uuid": "^3.0",
+        "leafo/lessphp": "^0.5.0",
+        "jdorn/sql-formatter": "^1.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
